Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -33,7 +33,7 @@ This framework allows you to do this and much more, see subjects below for furth
 == Use Cases / Recipes ==
  * [RecipeGeoLocation Location Based] - using Maxmind GeoIP
  * [RecipeWeightedRoundRobin Weighted Round Robin] - adjusting ratios of traffic to machines/sites
- * [:Ruby_PDNS/Recipe/TimeBased:Time Base] - sending VIP customers to a low used site based on time
+ * [RecipeTimeBased Time Base] - sending VIP customers to a low used site based on time
 
 == Programming Reference ==
  * [:Ruby_PDNS/Programming/Request:Information available about the request]
