--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -36,7 +36,7 @@ This framework allows you to do this and much more, see subjects below for furth
  * [RecipeTimeBased Time Based] - sending VIP customers to a low used site based on time
 
 == Programming Reference ==
- * [:Ruby_PDNS/Programming/Request:Information available about the request]
+ * [ReferenceInfoAboutRequests Information available about the request]
  * [:Ruby_PDNS/Programming/Answer:Constructing replies]
  * Helpers and Plugins
    * [:Ruby_PDNS/Programming/RubyExtensions:Extensions and helpers to the Ruby language]
