--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -39,7 +39,7 @@ This framework allows you to do this and much more, see subjects below for furth
  * [ReferenceInfoAboutRequests Information available about the request]
  * [ReferenceConstructingReplies Constructing replies]
  * Helpers and Plugins
-   * [:Ruby_PDNS/Programming/RubyExtensions:Extensions and helpers to the Ruby language]
+   * [ReferenceRubyExtensions Extensions and helpers to the Ruby language]
    * [:Ruby_PDNS/Programming/GeoIP:GeoIP Functions]
 
 == Installation ==
