--- a/wiki/ReferenceGeoIP.wiki
+++ b/wiki/ReferenceGeoIP.wiki
@@ -5,7 +5,7 @@
 At present the GeoIP module is very limited, partly by the Ruby GeoIP module and by my personal needs.
 
 === country ===
-Does a simple country code lookup on either ''hostname'' or ''ip address''.
+Does a simple country code lookup on either _hostname_ or _ip address_.
 
 {{{
     case country(query[:remoteip])
