--- a/wiki/ReferenceInfoAboutRequests.wiki
+++ b/wiki/ReferenceInfoAboutRequests.wiki
@@ -14,7 +14,7 @@ module Pdns
 end
 }}}
 
-The ''query'' in this case would be a hash of the request, below is a dump of such a request:
+The _query_ in this case would be a hash of the request, below is a dump of such a request:
 
 {{{
 {:qname       => "www.your.net",
@@ -32,6 +32,6 @@ The contents of the hash are:
 ||:qtype||This can be values like :SRV, :ANY, :SOA, :TXT etc, any standard DNS record type that [http://doc.powerdns.com/types.html PDNS supports]||
 ||:id||PDNS assigns an ID to responses and later can ask you for a AXFR on just the ID, this value is currently unused by this framework but it's in the TODO to support it, it's passed on for completeness sake only at this point||
 ||:remoteip||This is the IP address of the requester, if you are using Bind as a frontend proxying requests to PDNS then this would be the IP of the Bind server||
-||:localip||This is the IP the PDNS server received the request on, only useful really on multiple homed machines that are not set to listen on ''0.0.0.0''||
+||:localip||This is the IP the PDNS server received the request on, only useful really on multiple homed machines that are not set to listen on _0.0.0.0_||
 
 You access the hash values like you would any hash in Ruby, see line 3 of the example above.
