--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,1 +1,11 @@
-* Foo
+== Use Cases / Recipes ==
+ * [RecipeGeoLocation Location Based] - using Maxmind GeoIP
+ * [RecipeWeightedRoundRobin Weighted Round Robin] - adjusting ratios of traffic to machines/sites
+ * [RecipeTimeBased Time Based] - sending VIP customers to a low used site based on time
+
+== Programming Reference ==
+ * [ReferenceInfoAboutRequests Information available about the request]
+ * [ReferenceConstructingReplies Constructing replies]
+ * Helpers and Plugins
+   * [ReferenceRubyExtensions Extensions and helpers to the Ruby language]
+   * [ReferenceGeoIP GeoIP Functions]
