--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,11 +1,11 @@
-== Use Cases / Recipes ==
- * [RecipeGeoLocation Location Based] - using Maxmind GeoIP
- * [RecipeWeightedRoundRobin Weighted Round Robin] - adjusting ratios of traffic to machines/sites
- * [RecipeTimeBased Time Based] - sending VIP customers to a low used site based on time
-
-== Programming Reference ==
- * [ReferenceInfoAboutRequests Information available about the request]
+=== Programming Reference ===
+ * [ReferenceInfoAboutRequests About requests]
  * [ReferenceConstructingReplies Constructing replies]
  * Helpers and Plugins
-   * [ReferenceRubyExtensions Extensions and helpers to the Ruby language]
-   * [ReferenceGeoIP GeoIP Functions]
+  * [ReferenceRubyExtensions Ruby Extensions]
+  * [ReferenceGeoIP GeoIP]
+
+== Use Cases / Recipes ==
+ * [RecipeGeoLocation Location Based]
+ * [RecipeWeightedRoundRobin Weighted Round Robin]
+ * [RecipeTimeBased Time Based]
