Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,9 +1,11 @@
- * [ReferenceInfoAboutRequests About requests]
- * [ReferenceConstructingReplies Constructing replies]
- * Helpers and Plugins
-  * [ReferenceRubyExtensions Ruby Extensions]
-  * [ReferenceGeoIP GeoIP]
+ * Programmers Reference
+   * [ReferenceInfoAboutRequests About requests]
+   * [ReferenceConstructingReplies Constructing replies]
+   * Helpers and Plugins
+     * [ReferenceRubyExtensions Ruby Extensions]
+     * [ReferenceGeoIP GeoIP]
 
- * [RecipeGeoLocation Location Based]
- * [RecipeWeightedRoundRobin Weighted Round Robin]
- * [RecipeTimeBased Time Based]
+ * Recipes
+   * [RecipeGeoLocation Location Based]
+   * [RecipeWeightedRoundRobin Weighted Round Robin]
+   * [RecipeTimeBased Time Based]
