--- a/wiki/ReferenceGeoIP.wiki
+++ b/wiki/ReferenceGeoIP.wiki
@@ -1,5 +1,5 @@
 #summary GeoIP Module
-#labels reference
+#labels Phase-UseCase
 == GeoIP Module ==
 
 At present the GeoIP module is very limited, partly by the Ruby GeoIP module and by my personal needs.
