Edited wiki page through web user interface.

--- a/wiki/RecipeWeightedRoundRobin.wiki
+++ b/wiki/RecipeWeightedRoundRobin.wiki
@@ -41,6 +41,9 @@ Here's a graph showing the effectiveness of this technique, this is for email se
 
 [http://www.devco.net/images/weighted-balance-graph.png]
 
-In this example I am managing the traffic between the Red and the Green machine, the Green machine is both farthest away to my clients and lowest spec yet it was getting the biggest volume of traffic due to the MS bug.  This was negatively impacting my clients as the server load was always 2 to 3 causing mail delivery delays.  The change was rolled out midnight, you can see the bias change from Green to Red over the next hours.
+In this example I am managing the traffic between the Red and the Green machine, the Green machine is both farthest away to my clients and lowest spec yet it was getting the biggest volume of traffic due to the MS bug.  This was negatively impacting my clients as the server load was always 2 to 3 causing mail delivery delays.  
+
+The change was rolled out midnight on the 6th, you can see the bias change from Green to Red over the next hours and stay that way for the days to come.  Since the change there have been zero alerts for load on the servers and no customer complaints, mail queues are down and everyone's happy - result.
+
 
 In this case I am balancing the traffic 3:1 using the technique above favoring the Red, and it is working 100% spot on.
