Removes options from the newrecord call
Updates issue 9
Calls to Pdns::newrecord() will now not take an option hash at all, I've left the options in the
Pdns::Resolvers for future use but will probably use helpers like 'answer' in the actual block
to set options rather than hashes when creating the function.

This breaks backward compatability of records.

--- a/wiki/RecipeGeoLocation.wiki
+++ b/wiki/RecipeGeoLocation.wiki
@@ -12,7 +12,7 @@ RPDNS includes at present just a country lookup method using maxmind geoip, in f
 
 {{{
 module Pdns
-  newrecord("static.your.net", :type => :record) do |query, answer|
+  newrecord("static.your.net") do |query, answer|
     case country(query[:remoteip])
       when "US", "CA"
         answer.content "64.xx.xx.245"
