--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -17,7 +17,7 @@
  * todo
 
 == Configuration ==
- * [ConfigurationGuide Configuring Ruby PDNS]
+ * [RPDNSConfigurationGuide Configuring Ruby PDNS]
 
 == TODO List ==
  * Report stats, at present each instance keeps query count stats per record, but no reporting of that yet
