--- a/wiki/RPDNSConfigurationGuide.wiki
+++ b/wiki/RPDNSConfigurationGuide.wiki
@@ -34,4 +34,4 @@ max_log_size = 1024000
 geoipdb = /var/lib/GeoIP/GeoIP.dat
 }}}
 
-There are many settings in PowerDNS that can affect the performance and effectiveness of this backend, please see PDNSConfigurationGuide for details on those
+There are many settings in PowerDNS that can affect the performance and effectiveness of this backend, please see [PDNSConfigurationGuide] for details on those
