Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -14,7 +14,7 @@
    * [ReferenceGeoIP GeoIP Functions]
 
 == Installation ==
- * todo
+ * [InstallGuide Installing Ruby PowerDNS]
 
 == Configuration ==
  * [RPDNSConfigurationGuide Configuring Ruby PDNS]
