Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,3 +1,7 @@
+ * [InstallGuide Installation Guide]
+ * Configuration
+  * [RPDNSConfigurationGuide ruby-pdns config guide]
+  * [PDNSConfigurationGuide PowerDNS config guide]
  * Programmers Reference
   * [ReferenceInfoAboutRequests About requests]
   * [ReferenceConstructingReplies Constructing replies]
