Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,4 +1,5 @@
- * [InstallGuide Installation Guide]
+ * Installing
+  * [InstallGuide Installation Guide]
  * Configuration
   * [RPDNSConfigurationGuide ruby-pdns config guide]
   * [PDNSConfigurationGuide PowerDNS config guide]
