--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -21,5 +21,6 @@
  * [PDNSConfigurationGuide PowerDNS configuration guide]
 
 == Release History ==
+ ||2009-08-10||Version 0.3-48 released||
  ||2009-08-09||Move to Google Code||
  ||2009-08-02||First release||
