--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,6 +8,7 @@
   * [ReferenceConstructingReplies Constructing replies]
   * [ReferenceRubyExtensions Ruby Extensions]
   * [ReferenceGeoIP GeoIP]
+  * [TestingRecords Testing]
  * Recipes
   * [RecipeGeoLocation Location Based]
   * [RecipeWeightedRoundRobin Weighted Round Robin]
