--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -7,4 +7,4 @@
  * New script has been added to facilitate testing of records interactively [http://code.google.com/p/ruby-pdns/issues/detail?id=15 #15]
 
 == 0.3 - 2009/10/03 ==
-Initial release
+Initial public release
