make the install guide and config guide part of the reference sets and create 0_3 versions

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -15,10 +15,10 @@
  * [TestingRecords Testing your records]
 
 == Installation ==
- * [InstallGuide Installing Ruby PowerDNS]
+ * [ReferenceInstallGuide Installing Ruby PowerDNS]
 
 == Configuration ==
- * [RPDNSConfigurationGuide Configuring Ruby PDNS]
+ * [ReferenceConfigurationGuide Configuring Ruby PDNS]
  * [PDNSConfigurationGuide PowerDNS configuration guide]
 
 == Release History ==
