Edited wiki page through web user interface.

--- a/wiki/ReferenceRubyExtensions_0_3.wiki
+++ b/wiki/ReferenceRubyExtensions_0_3.wiki
@@ -1,5 +1,5 @@
 #summary Extensions to the Ruby Language
-#labels Phase-Implementation
+#labels Phase-Historical
 = Extensions to the Ruby Language =
 
 <wiki:toc />
