--- a/wiki/ReferenceConfigurationGuide.wiki
+++ b/wiki/ReferenceConfigurationGuide.wiki
@@ -18,6 +18,7 @@ Comments starting with _#_ and new lines are allowed and will be ignored.
 ||keep_logs||10||Integer number||How many logs to keep||
 ||max_log_size||1024000||Integer number||What size log to keep||
 ||geoipdb||/var/lib/GeoIP/GeoIP.dat||Full path||Where to find the GeoIP.dat file||
+||maint_interval||60||Integer numbers in seconds||How often to run maintenance like dumping stats and clearing caches||
 
 A sample file can be seen below
 
@@ -32,6 +33,7 @@ reload_interval = 60
 keep_logs = 10
 max_log_size = 1024000
 geoipdb = /var/lib/GeoIP/GeoIP.dat
+maint_interval = 60
 }}}
 
 There are many settings in PowerDNS that can affect the performance and effectiveness of this backend, please see [PDNSConfigurationGuide] for details on those
